--- a/src/about/about.css
+++ b/src/about/about.css
@@ -1,17 +1,7 @@
-body {
-    margin: 0;
-    position: 0;
-    overflow-x: hidden;
-}
-
-
-.k {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 600px;
-    background-color: aqua;
-    margin: 10px;
-
+p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
