--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     position: 0;
     overflow-x: hidden;
-    background-color: rgb(21, 22, 27);
+    background-color: rgb(25, 25, 27);
 }
 
 
@@ -24,8 +24,8 @@ header {
 
 .name {
     display: flex;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    font-family: poppins, sans-serif;
     color: white;
 }
 
@@ -51,14 +51,14 @@ header {
     border-radius: 20px;
     border: none;
     cursor: pointer;
-    background-color: rgba(89, 0, 255, 0.151);
+    background-color: rgba(255, 0, 0, 0.151);
     color: white;
     transition: 0.3s;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #About-nomobile:hover {
-    background-color: rgba(89, 0, 255, 0.767);
+    background-color: rgba(255, 0, 0, 0.705);
 }
 
 #Experience-nomobile {
@@ -68,14 +68,14 @@ header {
     border-radius: 20px;
     border: none;
     cursor: pointer;
-    background-color: rgba(89, 0, 255, 0.151);
+    background-color: rgba(255, 0, 0, 0.151);
     color: white;
     transition: 0.3s;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #Experience-nomobile:hover {
-    background-color: rgba(89, 0, 255, 0.767);
+    background-color: rgba(255, 0, 0, 0.705);
 }
 
 #Contact-nomobile {
@@ -85,14 +85,14 @@ header {
     border-radius: 20px;
     border: none;
     cursor: pointer;
-    background-color: rgba(89, 0, 255, 0.151);
+    background-color: rgba(255, 0, 0, 0.151);
     color: white;
     transition: 0.3s;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #Contact-nomobile:hover {
-    background-color: rgba(89, 0, 255, 0.767);
+    background-color: rgba(255, 0, 0, 0.705);
 }
 
 .background {
@@ -100,10 +100,11 @@ header {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
-    background-color: rgb(33, 33, 41);
-    width: 98%;
+    background-color: rgb(39, 39, 43);
+    width: 97%;
     height: 1000px;
-    transform: translateY(67px);
+    transform: translateY(70px);
+
 
 }
 
@@ -126,26 +127,29 @@ header {
     .header-button-mobile {
         display: block;
         width: 130px;
-        height: 55px;
+        height: 50px;
         border-radius: 10px;
-        background-color: rgb(45, 45, 48);
+        background-color: rgb(47, 47, 53);
         transition: 0.4s;
         transform: translateX(-20px);
         margin-top: 5px;
         margin-left: auto;
         overflow: hidden;
+        box-shadow: 10px 10px 10px;
 
     }
 
     .header-button-mobile:hover {
         height: 220px;
+
     }
 
 
     .menu-logo {
         display: block;
         margin-left: 10px;
-        transform: translateY(13px);
+        transform: translateY(10px);
+
     }
 
     .line {
@@ -182,12 +186,13 @@ header {
         margin-right: auto;
         width: 110px;
         height: 35px;
-        font-size: 21px;
+        font-size: 18px;
         font-family: Arial, Helvetica, sans-serif;
         border-radius: 16px;
         border: none;
-        background-color: rgba(89, 0, 255, 0.87);
+        background-color: rgba(255, 0, 0, 0.705);
         color: white;
+        text-align: center;
 
 
     }
@@ -198,12 +203,13 @@ header {
         margin-right: auto;
         width: 110px;
         height: 35px;
-        font-size: 20px;
+        font-size: 17px;
         font-family: Arial, Helvetica, sans-serif;
         border-radius: 16px;
         border: none;
-        background-color: rgba(89, 0, 255, 0.87);
+        background-color: rgba(255, 0, 0, 0.705);
         color: white;
+        text-align: center;
     }
 
     .contact-button-mobile {
@@ -212,12 +218,13 @@ header {
         margin-right: auto;
         width: 110px;
         height: 35px;
-        font-size: 21px;
+        font-size: 18px;
         font-family: Arial, Helvetica, sans-serif;
         border-radius: 16px;
         border: none;
-        background-color: rgba(89, 0, 255, 0.87);
+        background-color: rgba(255, 0, 0, 0.705);
         color: white;
+        text-align: center;
     }
 
     #under-linei {
