about page done

--- a/src/experience/experience.css
+++ b/src/experience/experience.css
@@ -20,6 +20,7 @@ header {
     height: 66px;
     width: 100%;
     transform: translateY(-20px);
+
     background-color: rgba(0, 0, 0, 0.945);
 }
 
@@ -144,7 +145,7 @@ header {
     }
 
     .header-button-mobile:hover {
-        height: 175px;
+        height: 220px;
 
     }
 
@@ -248,224 +249,36 @@ header {
     border-radius: 10px;
 }
 
+.background {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    background-color: rgb(39, 39, 43);
+    width: 97%;
+    height: auto;
+    transform: translateY(70px);
 
-
-.picture-of-me {
-    background-image: url(images/apostolovzz.jpg);
-    background-repeat: no-repeat;
-    width: 200px;
-    height: 200px;
-    background-position: center;
-    border-radius: 50%;
-    transform: translateY(20px);
-    box-shadow: 8px 8px 25px 0.1px;
 
 
 }
 
-.picture-name-work {
+.cards-what-i-work {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    background-color: rgb(46, 46, 51);
-    height: 244px;
-    transform: translateY(35px);
-    margin: 20px;
-    gap: 30px;
-    overflow: hidden;
-}
-
-.name-work {
-    transform: translateY(33px);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
-}
-
-.name-surname {
-    font-size: 35px;
-    text-align: left;
-    transform: translateY(15px);
-}
-
-.what-i-work {
-    display: flex;
-    font-size: 24px;
-    text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(156, 156, 156);
-    transform: translateY(-10px);
-    margin-left: 5px;
-}
-
-@media (max-width: 538px) {
-    .picture-name-work {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        background-color: rgb(46, 46, 51);
-        height: 400px;
-        transform: translateY(35px);
-        margin: 20px;
-        gap: 30px;
-        overflow: hidden;
-    }
-
-    .name-work {
-        transform: translateY(-23px);
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 22px;
-
-    }
-
-    .name-surname {
-        font-size: 35px;
-        text-align: center;
-        transform: translateY(15px);
-    }
-
-    .what-i-work {
-        font-size: 24px;
-        text-align: center;
-        font-family: Arial, Helvetica, sans-serif;
-        color: rgb(156, 156, 156);
-        transform: translateY(-10px);
-        margin-left: 5px;
-    }
-
-}
-
-.blocks-about-me {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-color: rgb(46, 46, 51);
-    margin: 20px;
-    transform: translateY(27px);
     flex-wrap: wrap;
     gap: 10px;
 }
-
-.first-block {
-    margin: 23px;
-    width: 280px;
-    height: auto;
-    background-color: rgb(31, 31, 34);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-
-
-}
-
-.how-start-tx {
-    margin: 23px;
-    font-size: 30px;
-}
-
-.big-text-how-i-start {
-    margin: 23px;
-    font-size: 20px;
-}
-
-
-.the-second-block {
-    margin: 23px;
-    width: 280px;
-    height: auto;
-    background-color: rgb(31, 31, 34);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-.what-i-konw-tx {
-    margin: 23px;
-    font-size: 30px;
-}
-
-.what-know-big-tx {
-    margin: 23px;
-    font-size: 27px;
-}
-
-.about-me-block {
-    margin: 23px;
-    width: 280px;
-    height: auto;
-    background-color: rgb(31, 31, 34);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.age {
-    margin: 27px;
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 19px;
-    margin-top: 47px;
-}
-
-.city {
-    margin: 27px;
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 19px;
-    margin-top: 47px;
-
-}
-
-.residence {
-    margin: 27px;
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 19px;
-    margin-top: 47px;
-}
-
-
-#age-num {
-    margin-left: auto;
-}
-
-#city-kavadarci {
-    margin-left: auto;
-}
-
-#residence-macedonia {
-    margin-left: auto;
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 21px;
-    font-family: poppins, sans-serif;
-    height: 60px;
-    background-color: rgb(46, 46, 51);
-    z-index: 1;
-    margin-top: 70px;
-    color: white;
-
-
-
-}
-
-.developer-tx {
-    color: red;
-    margin-left: 8px;
-    transform: translateY(-23px);
-}
-
 
 .html {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 18px;
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
+    border-top-left-radius: 35px;
+    border-bottom-right-radius: 35px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(187, 84, 36);
     color: white;
@@ -476,8 +289,10 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 18px;
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
+    border-top-left-radius: 35px;
+    border-bottom-right-radius: 35px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(48, 112, 231);
     color: white;
@@ -487,9 +302,11 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
-    width: 70px;
-    height: 70px;
+    font-size: 18px;
+    width: 100px;
+    height: 100px;
+    border-top-left-radius: 35px;
+    border-bottom-right-radius: 35px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(18, 61, 180);
     color: white;
@@ -500,31 +317,11 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 18px;
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
+    border-top-left-radius: 35px;
+    border-bottom-right-radius: 35px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(155, 139, 1);
     color: white;
-}
-
-.the-third-block {
-    margin: 23px;
-    width: 280px;
-    height: auto;
-    background-color: rgb(31, 31, 34);
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-.blcoks-exp {
-    display: block;
-    margin-left: 104px;
-
-}
-
-.exp-tx {
-    font-size: 23px;
-    margin: 20px;
-    font-family: Arial, Helvetica, sans-serif;
 }
