--- a/src/contact/contact.css
+++ b/src/contact/contact.css
@@ -20,7 +20,6 @@ header {
     height: 66px;
     width: 100%;
     transform: translateY(-20px);
-
     background-color: rgba(0, 0, 0, 0.945);
 }
 
@@ -145,7 +144,7 @@ header {
     }
 
     .header-button-mobile:hover {
-        height: 220px;
+        height: 175px;
 
     }
 
@@ -249,79 +248,87 @@ header {
     border-radius: 10px;
 }
 
-.background {
+.backgrounds {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    flex-wrap: wrap;
+    width: auto;
+    height: 500px;
+    background-color: rgb(39, 39, 43);
+    transform: translateY(70px);
+}
+
+.first-background {
+    width: 400px;
+    height: 400px;
+    background-color: rgb(48, 48, 53);
+    overflow: hidden;
+}
+
+.profile-pic {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
-    background-color: rgb(39, 39, 43);
-    width: 97%;
-    height: auto;
-    transform: translateY(70px);
-
-
-
+    transform: translateY(30px);
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-image: url(/images/apostolovzz.jpg);
 }
 
-.cards-what-i-work {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
-.html {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    width: 100px;
-    height: 100px;
-    border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(187, 84, 36);
+.profle-name {
+    text-align: center;
+    font-size: 24px;
+    transform: translateY(25px);
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
-.css {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    width: 100px;
-    height: 100px;
-    border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(48, 112, 231);
-    color: white;
+.social-name {
+    text-align: center;
+    font-size: 22px;
+    transform: translateY(18px);
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(134, 134, 134);
 }
 
-.react {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    width: 100px;
-    height: 100px;
-    border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(18, 61, 180);
-    color: white;
+.first-under-bacground {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(70, 70, 75);
+    transform: translateY(25px);
+
+
 }
 
-.javascript {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    width: 100px;
-    height: 100px;
-    border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(155, 139, 1);
-    color: white;
+.sec-bacground {
+    margin: px;
+    width: 400px;
+    height: 400px;
+    background-color: rgb(48, 48, 53);
+
 }
+
+
+.email {
+    display: block;
+    text-align: center;
+    transform: translateY(12.5px);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 21px;
+    color: white;
+
+}
+
+.conract-background {
+    display: flex;
+    transform: translateY(155px);
+    height: 85px;
+    width: 100%;
+    background-color: rgb(70, 70, 75);
+
+
+}
+
