--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,13 @@ body {
     position: 0;
     overflow-x: hidden;
     background-color: rgb(25, 25, 27);
+    text-decoration: none;
 }
 
 
+a {
+    text-decoration: none;
+}
 
 header {
     z-index: 1;
@@ -197,6 +201,7 @@ header {
         background-color: rgba(255, 0, 0, 0.705);
         color: white;
         text-align: center;
+        text-decoration: underline;
 
 
     }
@@ -214,6 +219,7 @@ header {
         background-color: rgba(255, 0, 0, 0.705);
         color: white;
         text-align: center;
+        text-decoration: underline;
     }
 
     .contact-button-mobile {
@@ -229,6 +235,8 @@ header {
         background-color: rgba(255, 0, 0, 0.705);
         color: white;
         text-align: center;
+
+
     }
 
     #under-linei {
@@ -251,7 +259,7 @@ header {
 
 
 .picture-of-me {
-    background-image: url(images/apostolovzz.jpg);
+    background-image: url(../images/apostolovzz.jpg);
     background-repeat: no-repeat;
     width: 200px;
     height: 200px;
