--- a/src/contact/contact.css
+++ b/src/contact/contact.css
@@ -3,9 +3,13 @@ body {
     position: 0;
     overflow-x: hidden;
     background-color: rgb(25, 25, 27);
+
 }
 
 
+a {
+    text-decoration: none;
+}
 
 header {
     z-index: 1;
@@ -46,7 +50,6 @@ header {
 
 
 #About-nomobile {
-    text-decoration: underline;
     font-size: 22px;
     width: 110px;
     height: 40px;
@@ -91,6 +94,7 @@ header {
     color: white;
     transition: 0.3s;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
 }
 
 #Contact-nomobile:hover {
@@ -214,6 +218,7 @@ header {
         background-color: rgba(255, 0, 0, 0.705);
         color: white;
         text-align: center;
+
     }
 
     .contact-button-mobile {
@@ -229,6 +234,7 @@ header {
         background-color: rgba(255, 0, 0, 0.705);
         color: white;
         text-align: center;
+        text-decoration: underline;
     }
 
     #under-linei {
@@ -315,24 +321,77 @@ header {
 .email {
     display: block;
     text-align: center;
-    transform: translateY(12.5px);
+    transform: translateY(15px);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 21px;
+    font-size: 18px;
     color: white;
 
 }
 
 .conract-background {
     display: flex;
+    justify-content: center;
+    align-items: center;
     transform: translateY(155px);
-    height: 85px;
+    height: 70px;
     width: 100%;
     background-color: rgb(70, 70, 75);
+    gap: 20px;
 
 
 }
 
-.github {
-    width: 100px;
-    
+.github-img {
+    width: 63px;
+    height: 63px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.github-img:hover {
+    width: 68px;
+    height: 68px;
+}
+
+
+.instagram {
+    width: 65px;
+    height: 65px;
+    cursor: pointer;
+    transition: 0.2s;
+
+}
+
+.instagram:hover {
+    width: 70px;
+    height: 70px;
+}
+
+.facebook {
+    width: 66px;
+    height: 66px;
+    cursor: pointer;
+    transition: 0.2s;
+
+}
+
+.facebook:hover {
+    width: 71px;
+    height: 71px;
+}
+
+
+@media (max-width: 900px) {
+    .backgrounds {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 20px;
+        flex-wrap: wrap;
+        width: auto;
+        height: 800px;
+        background-color: rgb(39, 39, 43);
+        transform: translateY(70px);
+    }
+
 }
