--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,19 @@ header {
     background-color: rgba(255, 0, 0, 0.705);
 }
 
+#portfolio-nomobile {
+    font-size: 22px;
+    width: 136px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    background-color: rgba(255, 0, 0, 0.151);
+    color: white;
+    transition: 0.3s;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #Experience-nomobile {
     font-size: 22px;
     width: 144px;
@@ -148,7 +161,7 @@ header {
     }
 
     .header-button-mobile:hover {
-        height: 175px;
+        height: 230px;
 
     }
 
@@ -206,6 +219,8 @@ header {
 
     }
 
+
+
     .experience-button-mobile {
         display: block;
         margin-left: auto;
@@ -220,6 +235,24 @@ header {
         color: white;
         text-align: center;
         text-decoration: underline;
+    }
+
+    #portfolio-mobile {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 18px;
+        width: 110px;
+        height: 35px;
+        border-radius: 20px;
+        border: none;
+        cursor: pointer;
+        background-color: rgba(255, 0, 0, 0.705);
+        color: white;
+        text-align: center;
+        transition: 0.3s;
+        font-family: Arial, Helvetica, sans-serif;
+
     }
 
     .contact-button-mobile {
