--- a/src/portfolio/portfolio.css
+++ b/src/portfolio/portfolio.css
@@ -128,13 +128,7 @@ header {
 
 }
 
-@media (max-width: 900px) {
-    .header-button-no-mobile {
-        display: none;
 
-
-    }
-}
 
 @media only screen and (min-width:900px) and (max-width:100000px) {
     .header-button-mobile {
@@ -216,6 +210,24 @@ header {
         color: white;
         text-align: center;
 
+
+    }
+
+    #portfolio-mobile {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 18px;
+        width: 110px;
+        height: 35px;
+        border-radius: 20px;
+        border: none;
+        cursor: pointer;
+        background-color: rgba(255, 0, 0, 0.705);
+        color: white;
+        text-align: center;
+        transition: 0.3s;
+        font-family: Arial, Helvetica, sans-serif;
 
     }
 
@@ -302,8 +314,8 @@ header {
 .project {
     display: flex;
     justify-content: center;
-    width: 415px;
-    height: 320px;
+    width: 380px;
+    height: 285px;
     background-color: rgb(19, 18, 18);
     transform: translateY(20px);
     overflow: hidden;
@@ -311,8 +323,8 @@ header {
 
 .project-background {
     margin: 5px;
-    width: 395px;
-    height: 285px;
+    width: 360px;
+    height: 250px;
     background-color: rgb(34, 34, 36);
     background-position: center;
     background-size: 100%;
@@ -323,15 +335,15 @@ header {
 }
 
 .swipe-up-background-transparent {
-    width: 405px;
-    height: 285px;
+    width: 370px;
+    height: 250px;
     background-color: rgba(127, 255, 212, 0);
 
 }
 
 .see-more-background-project {
-    width: 395px;
-    height: 285px;
+    width: 360px;
+    height: 250px;
     background-color: rgba(0, 0, 0, 0.911);
     transform: translateY(270px);
 }
@@ -343,7 +355,7 @@ header {
 }
 
 .swipe-animation:hover {
-    transform: translateY(-150px);
+    transform: translateY(-250px);
 }
 
 .porfolio-tx {
@@ -373,4 +385,51 @@ header {
     transform: translateY(17px);
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+@media (max-width: 900px) {
+    .header-button-no-mobile {
+        display: none;
+
+
+    }
+
+    .project {
+        display: flex;
+        justify-content: center;
+        width: 270px;
+        height: 185px;
+        background-color: rgb(19, 18, 18);
+        transform: translateY(20px);
+        overflow: hidden;
+    }
+
+    .project-background {
+        margin: 5px;
+        width: 260px;
+        height: 160px;
+        background-color: rgb(34, 34, 36);
+        background-position: center;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        overflow: hidden;
+        background-image: url(/images/portfolio-project.png);
+    }
+
+    .swipe-up-background-transparent {
+        width: 260px;
+        height: 160px;
+        background-color: rgba(127, 255, 212, 0);
+
+    }
+
+    .see-more-background-project {
+        width: 260px;
+        height: 160px;
+        background-color: rgba(0, 0, 0, 0.911);
+        transform: translateY(270px);
+    }
+
+
 }
